--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 body{
   height:100%;
   width:100%;
+  overflow: hidden;
 }
 .backImage{
   background: url("../src/assets/images/background.png");
