--- a/src/App.css
+++ b/src/App.css
@@ -129,3 +129,31 @@ img{
     width: 50px; 
     height: 25px; 
   }
+
+  .custom-file-input {
+    width: 130px;
+    margin-top: 10px;
+  }
+  .custom-file-input::-webkit-file-upload-button {
+    visibility: hidden;
+  }
+  .custom-file-input::before {
+    content: 'Or Browse Image';
+    display: inline-block;
+    background-color: #027dc4;
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 10pt;
+    color: #fff;
+  }
+  .custom-file-input:hover::before {
+    border-color: black;
+  }
+  .custom-file-input:active::before {
+    background-color: #027dc4;
+  }
